--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 	
 	
 	
-	var mapabase = L.tileLayer('http://{s}.tile.stamen.com/toner/{z}/{x}/{y}.png', 
+	var mapabase = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 
 		{
 			maxZoom: 15,
 			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
