--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 	
 	
 	
-	var mapabase = L.tileLayer('https://api.maptiler.com/maps/streets/{z}/{x}/{y}.png', 
+	var mapabase = L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', 
 		{
 			maxZoom: 15,
 			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
